--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "guessing the gender based on Russian name, surname and patronymic",
   "main": "index.ts",
+  "repository": {
+    "url": "https://github.com/aapodolskiy/gender-rus",
+    "type": "git"
+  },
   "author": "Alexander <a.a.podolskiy@gmail.com>",
   "license": "MIT",
   "private": false
