--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
   "name": "gender-rus",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "https://github.com/aapodolskiy/gender-rus",
   "bugs": "https://github.com/aapodolskiy/gender-rus/issues",
-  "keywords": ["gender", "sex", "rus", "determine", "name", "surname", "patronymic", "пол", "определение", "имя", "фамилия", "отчество"],
+  "keywords": [
+    "gender",
+    "sex",
+    "rus",
+    "determine",
+    "name",
+    "surname",
+    "patronymic",
+    "пол",
+    "определение",
+    "имя",
+    "фамилия",
+    "отчество"
+  ],
   "description": "guessing the gender based on Russian name, surname and patronymic",
   "main": "index.ts",
   "repository": {
