--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gender-rus",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "homepage": "https://github.com/aapodolskiy/gender-rus",
   "bugs": "https://github.com/aapodolskiy/gender-rus/issues",
   "keywords": [
@@ -18,7 +18,8 @@
     "отчество"
   ],
   "description": "guessing the gender based on Russian name, surname and patronymic",
-  "main": "index.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "repository": {
     "url": "https://github.com/aapodolskiy/gender-rus",
     "type": "git"
